Added #filler that disables the main area when navigation drawer is open in 'Custom Search Engine 1'.

--- a/Custom Search Engine 1/index.html
+++ b/Custom Search Engine 1/index.html
@@ -26,6 +26,11 @@
         </div>
     </nav>
 
+    <!-- Filler -->
+    <div id="filler">
+
+    </div>
+
     <!-- Nav drawer -->
     <div class="nav-drawer closed" id="nav-drawer">
         <i id="close-nav-drawer" class="fas fa-times fa-2x"></i>
