Added media queries to 'Simple Admin Dashboard'.

--- a/Simple Admin Dashboard/index.html
+++ b/Simple Admin Dashboard/index.html
@@ -133,7 +133,7 @@
                                 <td>Active</td>
                             </tr>
                             <tr>
-                                <td>Alice Wanda Land</td>
+                                <td>Alicin Wanda Land</td>
                                 <td>wonderlander@mail.com</td>
                                 <td>Active</td>
                             </tr>
