--- a/BeginnersPad v2/index.html
+++ b/BeginnersPad v2/index.html
@@ -13,11 +13,11 @@
 <body>
     <!-- Navbar -->
     <nav>
-        <h1><a href="#">Beginners Pad</a></h1>
+        <h1><a href="index.html">Beginners Pad</a></h1>
         <ul class="nav-menu">
             <div class="badge">
                 <span class="badge-mark"></span>
-                <li><a href="#"><i class="fas fa-question-circle"></i> Help</a></li>
+                <li><a href="/help.html"><i class="fas fa-question-circle"></i> Help</a></li>
             </div>
             <div class="badge">
                 <span class="badge-mark"></span>
@@ -48,7 +48,7 @@
     <!-- Listings -->
     <section id="listings">
         <div class="container">
-            <h3 class="section-title">Newest Listings</h3>
+            <h3 class="section-title">Newest listings</h3>
             <div class="cards">
                 <div class="card">
                     <a href="#">
@@ -149,7 +149,7 @@
     <!-- Marketing -->
     <section id="marketing">
         <div class="container">
-            <h3 class="section-title">Why Choose Beginners Pad?</h3>
+            <h3 class="section-title">Why choose beginners pad?</h3>
             <div class="marketing-item">
                 <h4>Find your next home</h4>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit odit cumque reiciendis itaque eaque repudiandae.</p>
