Added 'Auth' pages and styling to 'Beginners Pad v2'.

--- a/BeginnersPad v2/help.html
+++ b/BeginnersPad v2/help.html
@@ -17,15 +17,15 @@
         <ul class="nav-menu">
             <div class="badge">
                 <span class="badge-mark"></span>
-                <li><a href="/help.html"><i class="fas fa-question-circle"></i> Help</a></li>
+                <li class="selected"><a href="help.html"><i class="fas fa-question-circle"></i> Help</a></li>
             </div>
             <div class="badge">
                 <span class="badge-mark"></span>
-                <li><a href="#"><i class="fas fa-user-plus"></i> Sign Up</a></li>
+                <li><a href="sign-up.html"><i class="fas fa-user-plus"></i> Sign Up</a></li>
             </div>
             <div class="badge">
                 <span class="badge-mark"></span>
-                <li><a href="#"><i class="fas fa-sign-in-alt"></i> Sign In</a></li>
+                <li><a href="sign-in.html"><i class="fas fa-sign-in-alt"></i> Sign In</a></li>
             </div>
         </ul>
     </nav>
@@ -106,7 +106,7 @@
                     <div class="form-group">
                         <label for="help_category">Help category*</label>
                         <select name="Help category" id="help_category">
-                            <option value="" selected>select category</option>
+                            <option value="" selected>--select category--</option>
                             <option value="billing">Billing</option>
                             <option value="my_account">My account</option>
                             <option value="request_account_closure">Request account closure</option>
