--- a/BeginnersPad v2/index.html
+++ b/BeginnersPad v2/index.html
@@ -17,15 +17,15 @@
         <ul class="nav-menu">
             <div class="badge">
                 <span class="badge-mark"></span>
-                <li><a href="/help.html"><i class="fas fa-question-circle"></i> Help</a></li>
+                <li><a href="help.html"><i class="fas fa-question-circle"></i> Help</a></li>
             </div>
             <div class="badge">
                 <span class="badge-mark"></span>
-                <li><a href="#"><i class="fas fa-user-plus"></i> Sign Up</a></li>
+                <li><a href="sign-up.html"><i class="fas fa-user-plus"></i> Sign Up</a></li>
             </div>
             <div class="badge">
                 <span class="badge-mark"></span>
-                <li><a href="#"><i class="fas fa-sign-in-alt"></i> Sign In</a></li>
+                <li><a href="sign-in.html"><i class="fas fa-sign-in-alt"></i> Sign In</a></li>
             </div>
         </ul>
     </nav>
