Added 'View Listings' and 'View Listing' views, styles and js files in 'Beginners Pad v2'.

--- a/BeginnersPad v2/view-listings.html
+++ b/BeginnersPad v2/view-listings.html
@@ -30,16 +30,12 @@
         </ul>
     </nav>
 
-    <!-- Showcase -->
-    <section id="showcase">
+    <section class="showcase-small">
         <div class="showcase-overlay">
             <div class="container">
                 <div>
-                    <h1>Welcome to Beginners Pad</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum ex corporis aut porro vitae nam iusto neque est?
-                        Dolores distinctio nam cupiditate veniam enim! Magnam quae delectus expedita tempore eaque!
-                    </p>
-                    <a href="#" class="btn-link">Learn more</a>
+                    <h2>Property listings</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum ex corporis aut porro vitae nam iusto neque est</p>
                 </div>
             </div>
         </div>
@@ -48,7 +44,16 @@
     <!-- Listings -->
     <section id="listings">
         <div class="container">
-            <h3 class="section-title">Newest listings</h3>
+            <div class="container-btn-dropdown">
+                <select class="btn-dropdown" name="listing_sort" id="listing_sort">
+                    <option value="" selected>Sort by newest</option>
+                    <option value="">Sort by oldest</option>
+                    <option value="">Sort by cheapest</option>
+                    <option value="">Sort by priciest</option>
+                    <option value="">Sort by largest area</option>
+                    <option value="">Sort by most rooms</option>
+                </select>
+            </div>
             <div class="cards">
                 <div class="card">
                     <a href="/view-listing.html">
@@ -139,56 +144,100 @@
                         </div>
                     </a>
                 </div>
-            </div>
-            <div class="section-more">
-                <a href="/view-listings.html">View more listings <i class="fas fa-chevron-right"></i></a>
-            </div>
-        </div>
-    </section>
 
-    <!-- Marketing -->
-    <section id="marketing">
-        <div class="container">
-            <h3 class="section-title">Why choose beginners pad?</h3>
-            <div class="marketing-item">
-                <h4>Find your next home</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit odit cumque reiciendis itaque eaque repudiandae.</p>
-                <a href="#">Learn more <i class="fas fa-chevron-right"></i></a>
-            </div>
-            <div class="marketing-item">
-                <h4>Subscribe to premium waiting list to get the newest listing updates before they go public</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit odit cumque reiciendis itaque eaque repudiandae.</p>
-                <a href="#">Learn more <i class="fas fa-chevron-right"></i></a>
-            </div>
-            <div class="marketing-item">
-                <h4>List your property with us</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit odit cumque reiciendis itaque eaque repudiandae.</p>
-                <a href="#">Learn more <i class="fas fa-chevron-right"></i></a>
-            </div>
-        </div>
-    </section>
+                <div class="card">
+                    <a href="/view-listing.html">
+                        <div class="image">
+                            <img src="images/logo.png" alt="">
+                        </div>
+                        <div class="card-info">
+                            <h4>Name</h4>
+                            <p class="location">Location</p>
+                            <p class="type">Listing type</p>
+                            <p class="price">KES 0.00</p>
+                            <p class="timestamp">Added 5 hours ago</p>
+                        </div>
+                    </a>
+                </div>
 
-    <!-- Links -->
-    <section id="links">
-        <!-- Social media links -->
-        <div class="social">
-            <a href="#"><i class="fab fa-facebook-f"></i> Facebook</a>
-            <a href="#"><i class="fab fa-twitter"></i> Twitter</a>
-            <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
+                <div class="card">
+                    <a href="/view-listing.html">
+                        <div class="image">
+                            <img src="images/logo.png" alt="">
+                        </div>
+                        <div class="card-info">
+                            <h4>Name</h4>
+                            <p class="location">Location</p>
+                            <p class="type">Listing type</p>
+                            <p class="price">KES 0.00</p>
+                            <p class="timestamp">Added 5 hours ago</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="card">
+                    <a href="/view-listing.html">
+                        <div class="image">
+                            <img src="images/logo.png" alt="">
+                        </div>
+                        <div class="card-info">
+                            <h4>Name</h4>
+                            <p class="location">Location</p>
+                            <p class="type">Listing type</p>
+                            <p class="price">KES 0.00</p>
+                            <p class="timestamp">Added 5 hours ago</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="card">
+                    <a href="/view-listing.html">
+                        <div class="image">
+                            <img src="images/logo.png" alt="">
+                        </div>
+                        <div class="card-info">
+                            <h4>Name</h4>
+                            <p class="location">Location</p>
+                            <p class="type">Listing type</p>
+                            <p class="price">KES 0.00</p>
+                            <p class="timestamp">Added 5 hours ago</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="card">
+                    <a href="/view-listing.html">
+                        <div class="image">
+                            <img src="images/logo.png" alt="">
+                        </div>
+                        <div class="card-info">
+                            <h4>Name</h4>
+                            <p class="location">Location</p>
+                            <p class="type">Listing type</p>
+                            <p class="price">KES 0.00</p>
+                            <p class="timestamp">Added 5 hours ago</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="card">
+                    <a href="/view-listing.html">
+                        <div class="image">
+                            <img src="images/logo.png" alt="">
+                        </div>
+                        <div class="card-info">
+                            <h4>Name</h4>
+                            <p class="location">Location</p>
+                            <p class="type">Listing type</p>
+                            <p class="price">KES 0.00</p>
+                            <p class="timestamp">Added 5 hours ago</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
         </div>
-        <!-- About section -->
-        <div class="about">
-            <a href="#">Who we are</a>
-            <a href="#">Contact us</a>
-        </div>
-        <!-- Other links -->
-        <div class="others">
-            <a href="#">Privacy policy</a>
-            <a href="#">Terms of service</a>
-            <a href="#">Topics/articles</a>
-        </div>
-    </section>
-    
+    </section>    
+
     <!-- Footer -->
     <footer>
         <p>&copy; 2021 Beginners Pad</p>
