--- a/BeginnersPad v2/sign-up.html
+++ b/BeginnersPad v2/sign-up.html
@@ -35,14 +35,16 @@
              <!-- Form -->
             <div class="auth-form">
                 <h3 class="section-title">Sign up</h3>
-                <form>
-                    <div class="form-group name">
-                        <label for="fname">First name</label>
-                        <input type="text" name="fname" id="fname">
-                    </div>
-                    <div class="form-group name">
-                        <label for="lname">Last name</label>
-                        <input type="text" name="lname" id="lname">
+                <form id="form-auth">
+                    <div class="form-group">
+                        <div class="grp-name">
+                            <label for="fname">First name</label>
+                            <input type="text" name="fname" id="fname">
+                        </div>
+                        <div class="grp-name">
+                            <label for="lname">Last name</label>
+                            <input type="text" name="lname" id="lname">
+                        </div>
                     </div>
                     <div class="form-group">
                         <label for="email">Email address</label>
