Added lister information to 'Beginners Pad v2'.

--- a/BeginnersPad v2/view-listing.html
+++ b/BeginnersPad v2/view-listing.html
@@ -221,6 +221,32 @@
                             </div>
                         </div>
                     </div>
+                    <div class="lister-details">
+                        <h3>Lister information</h3>
+                        <div class="details">
+                            <div class="header">
+                                <div>
+                                    <h2 class="name">Lister name</h2>
+                                    <p class="timestamp">Joined on 01 Jan 2021</p>
+                                </div>
+                                <img src="/images/logo.png" alt="">
+                            </div>
+                            <p class="listings-count">6 listings posted</p>
+                            <div class="info-rating-grp">
+                                <p class="rating">Rating: 4.0/5</p>
+                                <div class="stars">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="far fa-star"></i>
+                                </div>
+                            </div>
+                            <div class="section-more">
+                                <a href="#">View lister profile <i class="fas fa-chevron-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="panel">
                     <div class="listing-features">
