--- a/BeginnersPad v2/view-listing-unit.html
+++ b/BeginnersPad v2/view-listing-unit.html
@@ -30,7 +30,26 @@
         </ul>
     </nav>
 
-    
+    <section class="unit-main">
+        <div class="container">
+            <div class="main-img">
+                <!-- Images -->
+                <div class="img">
+                    <div class="more-images">
+                        <i class="fas fa-images"></i>
+                        <span>All images</span>
+                    </div>
+                </div>
+                <div class="img"></div>
+                <div class="img"></div>
+                <div class="img"></div>
+            </div>
+            <!-- Info -->
+            <div class="main-info">
+                <h2>Unit title</h2>
+            </div>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer>
