--- a/BeginnersPad v2/view-listing-unit.html
+++ b/BeginnersPad v2/view-listing-unit.html
@@ -30,7 +30,7 @@
         </ul>
     </nav>
 
-    <section class="unit-main">
+    <section class="section-unit-main">
         <div class="container">
             <div class="main-img">
                 <!-- Images -->
@@ -47,6 +47,64 @@
             <!-- Info -->
             <div class="main-info">
                 <h2>Unit title</h2>
+                <p class="price">KES 0.00</p>
+                <p class="deposit">Initial deposit: not required</p>
+                <p class="floor">Floor: ground floor</p>
+                <p class="timestamp">Added on 01-01-2021 00:00:00</p>
+                <p class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam quae explicabo numquam soluta in
+                    repellat, consectetur iure officiis beatae alias quibusdam sit saepe, quam pariatur.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-unit-secondary">
+        <div class="container">
+            <div class="panel-grp">
+                <div class="panel">
+                    <div class="unit-features">
+                        <h3>Unit features</h3>
+                        <div class="features">
+                            <ul>
+                                <li>1 bedroom</li>
+                                <li>2 bathrooms</li>
+                                <li>40sq Metres</li>
+                                <li>WiFi connectivity</li>
+                                <li>1 balcony</li>
+                                <li>instant showers</li>
+                                <li>power-saving light bulbs</li>
+                                <li>cooling fans in bedroom and living room</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="unit-disclaimer">
+                        <h3>Disclaimer (important)</h3>
+                        <div class="features">
+                            <ul>
+                                <li>unit to be used for residential purposes only</li>
+                                <li>2 pets max</li>
+                                <li>both pets must be neutered and vaccinated</li>
+                                <li>rubbish must be deposited every Sunday for collection</li>
+                                <li>all issues should be reported to caretaker within 24 hours of discovery/occurrence</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="unit-apply">
+                        <h3>Apply for housing</h3>
+                        <div class="apply-grp">
+                            <div class="apply">
+                                <p>Like this house?</p>
+                                <button class="btn-primary">Apply now</button>
+                            </div>
+                            <div class="tour">
+                                <p>Still haven't made up your mind?</p>
+                                <button class="btn-link">Request tour</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel">
+
+                </div>
             </div>
         </div>
     </section>
