Added 'ratings (.stars)' graphic styling for main cards in 'utilities.css' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/index.html
+++ b/BeginnersPad v2/index.html
@@ -59,7 +59,7 @@
                             <h4>Name</h4>
                             <p class="location">Location</p>
                             <p class="type">Listing type</p>
-                            <p class="price">KES 0.00</p>
+                            <p class="price">KES 1000 - 2000</p>
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
                     </a>
@@ -74,7 +74,7 @@
                             <h4>Name</h4>
                             <p class="location">Location</p>
                             <p class="type">Listing type</p>
-                            <p class="price">KES 0.00</p>
+                            <p class="price">KES 1000 - 2000</p>
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
                     </a>
@@ -89,7 +89,7 @@
                             <h4>Name</h4>
                             <p class="location">Location</p>
                             <p class="type">Listing type</p>
-                            <p class="price">KES 0.00</p>
+                            <p class="price">KES 1000 - 2000</p>
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
                     </a>
@@ -104,7 +104,7 @@
                             <h4>Name</h4>
                             <p class="location">Location</p>
                             <p class="type">Listing type</p>
-                            <p class="price">KES 0.00</p>
+                            <p class="price">KES 1000 - 2000</p>
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
                     </a>
@@ -119,7 +119,7 @@
                             <h4>Name</h4>
                             <p class="location">Location</p>
                             <p class="type">Listing type</p>
-                            <p class="price">KES 0.00</p>
+                            <p class="price">KES 1000 - 2000</p>
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
                     </a>
@@ -134,7 +134,7 @@
                             <h4>Name</h4>
                             <p class="location">Location</p>
                             <p class="type">Listing type</p>
-                            <p class="price">KES 0.00</p>
+                            <p class="price">KES 1000 - 2000</p>
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
                     </a>
