--- a/BeginnersPad v2/view-listing-unit.html
+++ b/BeginnersPad v2/view-listing-unit.html
@@ -96,7 +96,7 @@
                                 <button class="btn-primary">Apply now</button>
                             </div>
                             <div class="tour">
-                                <p>Still haven't made up your mind?</p>
+                                <p>Still unsure?</p>
                                 <button class="btn-link">Request tour</button>
                             </div>
                         </div>
