--- a/BeginnersPad v2/view-listings.html
+++ b/BeginnersPad v2/view-listings.html
@@ -64,7 +64,7 @@
                             <h4>Name</h4>
                             <p class="location">Location</p>
                             <p class="type">Listing type</p>
-                            <p class="price">KES 0.00</p>
+                            <p class="price">KES 1000 - 2000</p>
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
                     </a>
@@ -79,7 +79,7 @@
                             <h4>Name</h4>
                             <p class="location">Location</p>
                             <p class="type">Listing type</p>
-                            <p class="price">KES 0.00</p>
+                            <p class="price">KES 1000 - 2000</p>
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
                     </a>
@@ -94,7 +94,7 @@
                             <h4>Name</h4>
                             <p class="location">Location</p>
                             <p class="type">Listing type</p>
-                            <p class="price">KES 0.00</p>
+                            <p class="price">KES 1000 - 2000</p>
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
                     </a>
@@ -109,7 +109,7 @@
                             <h4>Name</h4>
                             <p class="location">Location</p>
                             <p class="type">Listing type</p>
-                            <p class="price">KES 0.00</p>
+                            <p class="price">KES 1000 - 2000</p>
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
                     </a>
@@ -124,7 +124,7 @@
                             <h4>Name</h4>
                             <p class="location">Location</p>
                             <p class="type">Listing type</p>
-                            <p class="price">KES 0.00</p>
+                            <p class="price">KES 1000 - 2000</p>
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
                     </a>
@@ -139,7 +139,7 @@
                             <h4>Name</h4>
                             <p class="location">Location</p>
                             <p class="type">Listing type</p>
-                            <p class="price">KES 0.00</p>
+                            <p class="price">KES 1000 - 2000</p>
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
                     </a>
@@ -154,7 +154,7 @@
                             <h4>Name</h4>
                             <p class="location">Location</p>
                             <p class="type">Listing type</p>
-                            <p class="price">KES 0.00</p>
+                            <p class="price">KES 1000 - 2000</p>
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
                     </a>
@@ -169,7 +169,7 @@
                             <h4>Name</h4>
                             <p class="location">Location</p>
                             <p class="type">Listing type</p>
-                            <p class="price">KES 0.00</p>
+                            <p class="price">KES 1000 - 2000</p>
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
                     </a>
@@ -184,7 +184,7 @@
                             <h4>Name</h4>
                             <p class="location">Location</p>
                             <p class="type">Listing type</p>
-                            <p class="price">KES 0.00</p>
+                            <p class="price">KES 1000 - 2000</p>
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
                     </a>
@@ -199,7 +199,7 @@
                             <h4>Name</h4>
                             <p class="location">Location</p>
                             <p class="type">Listing type</p>
-                            <p class="price">KES 0.00</p>
+                            <p class="price">KES 1000 - 2000</p>
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
                     </a>
@@ -214,7 +214,7 @@
                             <h4>Name</h4>
                             <p class="location">Location</p>
                             <p class="type">Listing type</p>
-                            <p class="price">KES 0.00</p>
+                            <p class="price">KES 1000 - 2000</p>
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
                     </a>
@@ -229,7 +229,7 @@
                             <h4>Name</h4>
                             <p class="location">Location</p>
                             <p class="type">Listing type</p>
-                            <p class="price">KES 0.00</p>
+                            <p class="price">KES 1000 - 2000</p>
                             <p class="timestamp">Added 5 hours ago</p>
                         </div>
                     </a>
