Added more HTML to 'view-listing-unit.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/view-listing-unit.html
+++ b/BeginnersPad v2/view-listing-unit.html
@@ -103,7 +103,106 @@
                     </div>
                 </div>
                 <div class="panel">
-
+                    <div class="listing-units-list">
+                        <h3>Units available</h3>
+                        <div class="listing-units-grp">
+                            <div class="card-unit">
+                                <a href="/view-listing-unit.html">
+                                    <div class="unit-details">
+                                        <h2>Unit title</h2>
+                                        <div class="specs">
+                                            <span class="spec">1 bed,</span>
+                                            <span class="spec">2 bath,</span>
+                                            <span class="spec">40sq M</span>
+                                        </div>
+                                        <div class="deposit">
+                                            <span class="label">Initial deposit:</span>
+                                            <span class="data">not required</span>
+                                        </div>
+                                        <div class="price">
+                                            <span class="label">KES</span>
+                                            <span class="data">0.00</span>
+                                        </div>
+                                        <p class="timestamp">Added 5 hours ago</p>
+                                    </div>
+                                    <div class="thumb"></div>
+                                </a>  
+                            </div>
+                            
+                            <div class="card-unit">
+                                <a href="/view-listing-unit.html">
+                                    <div class="unit-details">
+                                        <h2>Unit title</h2>
+                                        <div class="specs">
+                                            <span class="spec">1 bed,</span>
+                                            <span class="spec">2 bath,</span>
+                                            <span class="spec">40sq M</span>
+                                        </div>
+                                        <div class="deposit">
+                                            <span class="label">Initial deposit:</span>
+                                            <span class="data">not required</span>
+                                        </div>
+                                        <div class="price">
+                                            <span class="label">KES</span>
+                                            <span class="data">0.00</span>
+                                        </div>
+                                        <p class="timestamp">Added 5 hours ago</p>
+                                    </div>
+                                    <div class="thumb"></div>
+                                </a>  
+                            </div>
+                            
+                            <div class="card-unit">
+                                <a href="/view-listing-unit.html">
+                                    <div class="unit-details">
+                                        <h2>Unit title</h2>
+                                        <div class="specs">
+                                            <span class="spec">1 bed,</span>
+                                            <span class="spec">2 bath,</span>
+                                            <span class="spec">40sq M</span>
+                                        </div>
+                                        <div class="deposit">
+                                            <span class="label">Initial deposit:</span>
+                                            <span class="data">not required</span>
+                                        </div>
+                                        <div class="price">
+                                            <span class="label">KES</span>
+                                            <span class="data">0.00</span>
+                                        </div>
+                                        <p class="timestamp">Added 5 hours ago</p>
+                                    </div>
+                                    <div class="thumb"></div>
+                                </a>  
+                            </div>
+                        </div>
+                    </div>
+                    <div class="listing-units-list">
+                        <h2>Property</h2>
+                        <div class="listing-units-grp">
+                            <div class="card-unit">
+                                <a href="/view-listing.html">
+                                    <div class="thumb"></div>
+                                    <div class="unit-details">
+                                        <h2>Unit title</h2>
+                                        <div class="specs">
+                                            <span class="spec">1 bed,</span>
+                                            <span class="spec">2 bath,</span>
+                                            <span class="spec">40sq M</span>
+                                        </div>
+                                        <div class="deposit">
+                                            <span class="label">Initial deposit:</span>
+                                            <span class="data">not required</span>
+                                        </div>
+                                        <div class="price">
+                                            <span class="label">KES</span>
+                                            <span class="data">0.00</span>
+                                        </div>
+                                        <p class="timestamp">Added 5 hours ago</p>
+                                    </div>
+                                </a>  
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
